remove collapsed feature for now, fix some small issues

--- a/src/sh2.less
+++ b/src/sh2.less
@@ -439,7 +439,7 @@ html, body, #main {
 
     .avatar {
         cursor: pointer;
-        margin-right: 0;
+        margin-right: 10px;
     }
 
     .line-header {
@@ -452,6 +452,10 @@ html, body, #main {
             flex-direction: column;
             justify-content: center;
         }
+    }
+
+    .meta.meta-line1 {
+        margin-left: 2px;
     }
 
     .line-star {
